prusti-tests/tests/verify_overflow/fail/extern-spec/traits/mismatched-sigs-unknown-function.rs
use prusti_contracts::*;

#[extern_spec]
trait Iterator {
    fn foo(&mut self); //~ ERROR: cannot find method or associated constant `foo` in trait `Iterator`
}

fn main() {}
